git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@707 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
@@ -6,7 +6,7 @@
         #include("${layoutheader}")
         
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/components/jquery-ui/jquery-ui-1.8.21.custom.css" type="text/css" />
+        <!--<link rel="stylesheet" href="../../css/components/jquery-ui/jquery-ui-1.8.21.custom.css" type="text/css" />-->
         <link rel="stylesheet" href="../../css/modalbox/proordenproduccion/formaProOrdenProduccion.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/proordenproduccion/formaBuscaproducto.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/proordenproduccion/formaRequisicionOP.css" type="text/css" />
@@ -18,7 +18,7 @@
         
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-        <script type="text/javascript" src="../../js/components/jquery-ui/jquery-ui-1.7.2.custom.min.js"></script>
+        <!--<script type="text/javascript" src="../../js/components/jquery-ui/jquery-ui.min.js"></script>-->
         
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/proordenproduccion/modalboxProOrdenProduccion.js"></script>
@@ -120,12 +120,12 @@
                     
                     <div id="div_two" title="" class="proordenproduccion_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" style="width:938px; padding-left:6px;"><strong>Registro de Orden de Producci&oacute;n</strong></div>
+                            <div class="fixed column" style="width:1058px; padding-left:6px;"><strong>Registro de Orden de Producci&oacute;n</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
-                        </div>                    
-
+                        </div>
+                        
                     </div>
                     
                     <div id="div_three" title="" class="proordenproduccion_div_three">
@@ -183,7 +183,7 @@
                                                                                                     </td>
                                                                                                     
                                                                                                     <td width="100">Observaciones</td>
-                                                                                                    <td width="350">
+                                                                                                    <td width="550">
                                                                                                         <textarea name="observaciones" style="width:345px;resize: none;" rows="2"></textarea>
                                                                                                     </td>
                                                                                                 </tr>
@@ -220,7 +220,7 @@
                                                                                                         <td width="10">Cliente</td>
                                                                                                         <td width="10"></td>
                                                                                                         <td><INPUT TYPE="text" name="rsocialcliente" style="width:250px;" readOnly="true"></td>
-                                                                                                        <td width="15"></td>
+                                                                                                        <td></td>
                                                                                                     </tr>
                                                                                                     <tr >
                                                                                                         <td colspna="14">
@@ -236,15 +236,17 @@
                                                                                                                     <tr class="productos_pedido">
                                                                                                                         <td class="grid" colspan="3">Productos del pedido: <span class="folio_prod_pedido"></td>
                                                                                                                     </tr>-->
+                                                                                                                    <!-- Header de el grid de subprocesos -->
                                                                                                                     <th class="productos_pedido">
                                                                                                                         <td class="grid" width="100">Codigo</td>
                                                                                                                         <td class="grid" width="100">Presentacion</td>
-                                                                                                                        <td class="grid" width="600">&nbsp;Descripci&oacute;n</td>
+                                                                                                                        <td class="grid" width="768">&nbsp;Descripci&oacute;n</td>
                                                                                                                         <td class="grid" width="100">Cantidad</td>
                                                                                                                     </th>
                                                                                                                 </thead>
                                                                                                             </table>
-                                                                                                            <div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:935px; height: 90px; border:1px solid #C1DAD7 !important;">	
+                                                                                                            <div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1070px; height: 90px; border:1px solid #C1DAD7 !important;">	
+                                                                                                                <!-- Body de el grid de subprocesos -->
                                                                                                                 <table class="productos_porpedido" border="0">
                                                                                                                     <tbody style="background-color: #FFFFFF;" valign="top" id="productos_porpedido">
                                                                                                                         
@@ -348,7 +350,7 @@
                                                                                                                     <tr class="subprocesos_seleccionados">
                                                                                                                         <td class="grid" id="td_eliminar" width="61"><div class="delete">&nbsp;#</div></td>
                                                                                                                         <td class="grid" width="80">&nbsp;Codigo</td>
-                                                                                                                        <td class="grid" width="200">&nbsp;Descripci&oacute;n</td>
+                                                                                                                        <td class="grid" width="446">&nbsp;Descripci&oacute;n</td>
                                                                                                                         <td class="grid" width="100">&nbsp;Subproceso</td>
                                                                                                                         <td class="grid" width="100">&nbsp;Persona</td>
                                                                                                                         <td class="grid" width="100">&nbsp;Equipo</td>
@@ -358,7 +360,7 @@
                                                                                                                     </tr>
                                                                                                                 </thead>
                                                                                                             </table>
-                                                                                                            <div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:871; height: 200px; border:1px solid #C1DAD7 !important;">	
+                                                                                                            <div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1070px; height: 200px; border:1px solid #C1DAD7 !important;">	
                                                                                                                 <table class="grid_productos_seleccionados" >
                                                                                                                     <tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos_seleccionados">
                                                                                                                     
@@ -420,7 +422,7 @@
                             </div>
 
 
-                            <div class="fixed column" style="width:955px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
+                            <div class="fixed column" style="width:1065px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
 								<table border="0">
 									<tr>
 										<td width="955"></td>
