--- a/erp-quimicos/src/main/webapp/vm/notascredito/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/notascredito/startup.vm
@@ -47,9 +47,11 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="100">Nota Cr&eacute;dito</td>
+				<td width="100">Folio</td>
 				<td width="20"></td>
 				<td width="245">Cliente</td>
+				<td width="20"></td>
+				<td width="100">Factura</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"></td>
 				<td colspan="3">Fecha de Expedici&oacute;n</td>
@@ -66,6 +68,8 @@
 				<td width="100"><INPUT TYPE="text" name="busqueda_folio" style="width:100px;"></td>
 				<td width="20"></td>
 				<td width="245"><INPUT TYPE="text" name="busqueda_cliente" style="width:245px;"></td>
+				<td width="20"></td>
+				<td width="100"><INPUT TYPE="text" name="busqueda_factura" style="width:100px;"></td>
 				<td width="20">&nbsp;</td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 				<td width="90"><INPUT TYPE="text" name="busqueda_fecha_inicial" style="width:90px;" readOnly="true"></td>
@@ -172,7 +176,7 @@
 															<td width="80">No.&nbsp;Cliente</td>
 															<td width="120">
 																<input type="hidden" name="id_cliente" value="0">
-																<INPUT TYPE="text" name="nocliente" style="width:120px;" readOnly="true">
+																<INPUT TYPE="text" name="nocliente" style="width:120px; border:1px solid #000;">
 															</td>
 															<td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_rfccliente"></div></td>
 															<td width="90" align="right"><a href="busca_cliente">(Buscar&nbsp;cliente)</a></td>
@@ -186,7 +190,7 @@
 														<tr>
 															<td width="10"></td>
 															<td width="80">Razon&nbsp;Social</td>
-															<td colspan="8" width="405"><INPUT TYPE="text" name="razoncliente" style="width:420px;" readOnly="true"></td>
+															<td colspan="8" width="405"><INPUT TYPE="text" name="razoncliente" style="width:420px;"></td>
 														</tr>
 														
 														<tr><td colspan="10" height="5"></td></tr>
@@ -250,7 +254,7 @@
 															<td width="10"></td>
 															<td width="50">Factura</td>
 															<td width="90">
-																<INPUT TYPE="text" name="factura" style="width:90px; text-align:left;" readOnly="true">
+																<INPUT TYPE="text" name="factura" style="width:90px; text-align:left; border:1px solid #000;">
 																<input type="hidden" name="id_moneda_factura" value="0">
 															</td>
 															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_factura"></div></td>
