--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -588,6 +588,26 @@
 
 
 
+									<li class="accessible" >
+										<a href="http://jdsharp.us" class="accessible">Envasado &raquo;</a>
+										<ul>
+											<li>
+												<a href="#" class="sub">Procesos &raquo;</a>
+												<ul>
+													<li class="topline"><a href="../crmregistrovisitas/startup.agnux">Configuraci&oacute;n</a></li>
+												</ul>
+											</li>
+											<li>
+												<a href="#" class="sub">Reportes</a>
+												<ul>
+													<li class="topline"><a href="#">xxxx</a></li>
+												</ul>
+											</li>
+										</ul>
+									</li>
+
+
+
 
 									<li class="accessible">
 										<a href="http://jdsharp.us" class="accessible">Configuraciones &raquo;</a>
