--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -587,14 +587,14 @@
 
 
 
-
+									<!--
 									<li class="accessible" >
 										<a href="http://jdsharp.us" class="accessible">Envasado &raquo;</a>
 										<ul>
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../crmregistrovisitas/startup.agnux">Configuraci&oacute;n</a></li>
+													<li class="topline"><a href="../envconf/startup.agnux">Configuraci&oacute;n</a></li>
 												</ul>
 											</li>
 											<li>
@@ -605,7 +605,7 @@
 											</li>
 										</ul>
 									</li>
-
+									-->
 
 
 
