--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -163,7 +163,7 @@
 													<li class="topline"><a href="../repantiguedadsaldocliente/startup.agnux">Antig&uuml;edad de Saldos</a></li>
 													<li class="topline"><a href="../repestadisticasanualesventas/startup.agnux">Estad&iacute;stico de Ventas Anuales Cliente</a></li>
 													<li class="topline"><a href="../repestadisticaanualventasproducto/startup.agnux">Estad&iacute;stico de Ventas Anuales Producto</a></li>
-                                                                                                        <li class="topline"><a href="../repclientes/startup.agnux">Direcciones de clientes</a></li>
+													<li class="topline"><a href="../repclientes/startup.agnux">Clientes</a></li>
 
 													<!--esto se agrego, estaba en menu cunetas por cobrar-->
 													<!--
