--- a/erp-quimicos/src/main/webapp/vm/cotcondicionescomerciales/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cotcondicionescomerciales/startup.vm
@@ -104,17 +104,21 @@
 
                                     <div id="tabx-1" class="contenidoPes" >
                                         <table border="0">
+                                                <tr>
+                                                        <td width="5"></td>
+							<td width="300" align="left">Condicion&nbsp;Comercial:&nbsp;</td>
+                                                        <td width="50"></td>
+                                                        <td width="5"></td>
+						</tr>
 						<tr>
 							<td width="5"></td>
-							<td width="85">Condicion&nbsp;Comerciales:&nbsp;</td>
-							<td width="300"><INPUT TYPE="text" name="titulo" style="width:300px;"></td>
-							<td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
-							<td width="25"></td>
-							<td></td>
+							<td width="300" ><textarea name="titulo"   style="width:450px; height:100px; resize: none;"></textarea></td>
+							<td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
+							<td width="5"></td>
+
 						</tr>
-						<tr>
-							<td width="6">&nbsp;</td>
-						</tr>
+
+
                                         </table>
                                     </div>
 
