--- a/erp-quimicos/src/main/webapp/css/modalbox/envconf/formaEnvConf.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/envconf/formaEnvConf.css
@@ -100,7 +100,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
     width:740px;
-    height:415px;
+    height:390px;
     border-radius:10px;
     background-color:#e9e9e9;
     border:3px solid #454442;
@@ -127,101 +127,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*font-family:tahoma;*/
     font-size:11px;
     width:728px;
-    height:180px;
+    /*height:180px;*/
     background-color:#e9e9e9;
-    margin-top:5px;
-    margin-right:10px;
-    margin-left:10px;
-    margin-bottom:10px;
-}
-
-/*
-#grid_productos td{
-	height:18px;
-	text-align:center;
-}
-
-#grid_productos input{
-	height:15px;
-}
-
-#grid_productos select{
-	height:17px;
-}
-*/
-
-.borde_oculto{
-	border-color:transparent; 
-	background:transparent;
-}
-
-
-
-/*clases para pestañas internas*/
-
-ul.pestanas_internas{
-    margin: 0;
-    padding: 0;
-    float: left;
-    list-style: none;
-    height: 20px;
-    border-bottom: 1px solid white;
-    width: 100%;
-}
-
-ul.pestanas_internas li{
-    width:100px;
-    float: left;
-    margin: 0;
-    padding: 0;
-    height: 19px;
-    line-height: 19px;
-    border-bottom: 1px solid white;
-    border-left: none;
-    margin-top:2px;
-    margin-bottom: 0px;
-    background: #A8A9AB;
-    overflow: hidden;
-    position: relative;
-    border-radius: 20px 20px 0px 0px;
-}
-
-ul.pestanas_internas li a{
-    text-align:center;
-    text-decoration: none;
-    color:#4C6088;
-    display: block;
-    font-size: 1em;
-    padding: 0px;
-    border: 0px;
-    outline: none;
-}
-
-ul.pestanas_internas li a:hover{
-    background: #AFC8FB;
-    border-radius: 20px 20px 0px 0px;
-}
-html ul.pestanas_internas li.active_internas, html ul.pestanas_internas li.active_internas a:hover{
-    background: #FFFFFF;
-}
-
-.header_interno{
-    background: #808080;
-}
-
-.contenidoPes_internas{
-    background:white;
-    padding: 8px;
-    font-size: 1em; 
-}
-
-.envconf_div_three_interno{
-    /*font-family:tahoma;*/
-    font-size:11px;
-    width:680px;
-    height:200px;
-    background-color: #FFFFFF;
-    border: 1px solid #808080;
     margin-top:5px;
     margin-right:10px;
     margin-left:10px;
