git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@781 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/envconf/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envconf/startup.vm
@@ -59,7 +59,7 @@
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td width="150">
 					<select name="busqueda_select_tipo_prod" style="width:150px;">
-						<option value="1" selected="yes">Prod. Terminado</option>
+						<option value="0">[--Seleccionar Tipo--]</option>
 					</select>
 				</td>
 				<td width="10"></td>
