--- a/erp-quimicos/src/main/webapp/vm/invpresentaciones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invpresentaciones/startup.vm
@@ -2,25 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>${title}</title>
-        
+
         #include("${layoutheader}")
-		
+
         <!--  css for this catalogo -->
         <link rel="stylesheet" href="../../css/modalbox/invpresentaciones/formaPresentaciones.css" type="text/css" />
-		
+
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/invpresentaciones/modalboxPresentaciones.js"></script>
         <script type="text/javascript" src="../../js/implements/invpresentaciones/index.js" ></script>
-        
+
         #include("${layoutmenu}")
-        
+
         <input type="hidden" name="contextpath" value="$url">
         <input type="hidden" name="user" value="$username">
         <input type="hidden" name="iu" value="$iu">
         <input type="hidden" name="emp" value="$empresa">
         <input type="hidden" name="suc" value="$sucursal">
-        
+
         <!--Esta tabla va  en la barra de acciones -->
 		<table class="table_acciones" style="display:none" border="0">
 			<tr>
@@ -30,7 +30,7 @@
 				<td height="30"><a href="visualiza_buscador" class="tooltip"><div class="onmouseOutVisualizaBuscador" id="vbuscador"></div><span>Busqueda</span></a>  </td>
 			</tr>
 		</table>
-        
+
         <!--Esta tabla va  en la barra de buscador -->
 		<table border="0" class="tabla_buscador" style="display:none">
 			<tr>
@@ -41,7 +41,7 @@
 				<td>Descripcion</td>
 				<td width="10">&nbsp;&nbsp;</td>
 				<td><INPUT TYPE="text" name="busqueda_descripcion" style="width:150px;"></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>                                
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><INPUT TYPE="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td ><INPUT TYPE="button" value="Limpiar"></td>
@@ -52,7 +52,7 @@
 			</tr>
 
 		</table>
-        
+
         <!--  otra parte -->
         <table class="acciones">
             <tr>
@@ -66,22 +66,22 @@
                 <td ></td>
             </tr>
         </table>
-		
-        
-        
-		
-        
-        
-		
-        
-        
+
+
+
+
+
+
+
+
+
         <!--form for inventario de presentaciones -->
         <form id="formaPresentaciones" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
                 <div id="div_one" class="panelcito_modal presentaciones_div_one"  style="display:none;" title="">
-                
+
                 <input type="hidden" name="identificador">
-					
+
                     <div id="div_two" title="" class="presentaciones_div_two">
                         <div class="columns on-2">
                             <div class="fixed column" id="cierra" style="width:410px; padding-left:6px;"><strong>Cat&aacute;logo Presentaciones de Productos</strong></div>
@@ -90,8 +90,8 @@
                             </div>
                         </div>
                     </div>
-                    
-                    
+
+
                     <div id="div_three" title="" class="presentaciones_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
@@ -103,24 +103,46 @@
                         <div class="columns" style="background:#731F6C;">
                             <div class="container" style="background:white;">
                                 <div class="fixed column" class="content_x" >
-									
+
                                     <div id="tabx-1" class="contenidoPes" >
                                         <table border="0">
-											<tr>
-												<td width="5"></td>
-												<td width="70">Presentaci&oacute;n:</td>
-												<td width="270"><INPUT TYPE="text" name="descripcion" style="width:270px;"></td>
-												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
-                                                <td width="5"></td>
-											</tr>
-											<tr>
-												<td width="5">&nbsp;</td>
-											</tr>
-											
-											
+                                            <tr>
+                                                    <td width="5"></td>
+                                                    <td width="70">Presentaci&oacute;n:&nbsp;</td>
+                                                    <td width="350"><INPUT TYPE="text" name="descripcion" style="width:330px;"></td>
+                                                    <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
+                                                    <td width="5"></td>
+                                            </tr>
+                                            <tr>
+                                                    <td width="5">&nbsp;</td>
+                                            </tr>
+                                            <tr>
+                                                    <td width="5">&nbsp;</td>
+                                                    <td width="305" colspan="4" valign="top" >
+                                                        <fieldset style="border: solid 1px #313E74;" class="gral">
+                                                                <legend>Equivalencia</legend>
+                                                                <ol valign="top">
+                                                                        <table border="0">
+                                                                                <tr>
+                                                                                        <td >Cantidad:&nbsp;</td>
+                                                                                        <td >
+                                                                                                <td width="270"><INPUT TYPE="text" name="cantidad" style="width:100px;"></td>
+                                                                                        </td>
+                                                                                        <td ></td>
+                                                                                        <td ></td>
+                                                                                        <td ></td>
+                                                                                </tr>
+
+                                                                        </table>
+                                                                </ol>
+                                                        </fieldset>
+
+                                                    </td>
+                                            </tr>
+
                                         </table>
                                     </div>
-									
+
                                 </div>
                             </div>
 
@@ -137,23 +159,23 @@
 										<td><div id="boton_cancelar" style="width:77px; height:24px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn2.png'); background-repeat:no-repeat;"></div></td>
 									</tr>
 								</table>
-                                
+
                             </div>
-                            
-                            
-                            
+
+
+
                         </div>
                     </div>
                 </div>
         </form>
-        
-        
-        
-        
+
+
+
+
         #include("${layoutfooter}")
-        
-        
+
+
     </body>
-</html>	
+</html>
 
 
