git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@798 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -594,6 +594,7 @@
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../envconf/startup.agnux">Configuraci&oacute;n</a></li>
+													<li class="topline"><a href="../envreenv/startup.agnux">Re-Envasado</a></li>
 												</ul>
 											</li>
 											<li>
