git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@801 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -578,7 +578,7 @@
 												<ul>
 													<!--<li class="topline"><a href="#">F&oacute;rmulas</a></li>-->
 													<li class="topline"><a href="../proreporteproduccion/startup.agnux">Producci&oacute;n</a></li>
-													<!--<li class="topline"><a href="../proreportecalidad/startup.agnux">reporte de calidad</a></li>-->
+													<!--<li class="topline"><a href="../proreportecalidad/startup.agnux">Reporte de Calidad</a></li>-->
 												</ul>
 											</li>
 										</ul>
