--- a/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
@@ -138,91 +138,141 @@
 												<td width="700">
 													<table border="0">
 														<tr>
-															<td width="5"></td>
-															<td width="90">C&oacute;digo</td>
-															<td width="10"></td>
-															<td width="60"></td>
-															<td width="240">Descripci&oacute;n</td>
-															<td width="10">&nbsp;</td>
-															<td width="60">&nbsp;</td>
-															<td width="80">Unidad</td>
-															<td width="10">&nbsp;</td>
-															<td width="120">Presentaci&oacute;n</td>
-															<td width="10">&nbsp;</td>
+															<td width="70">Folio</td>
+															<td width="120"><input type="text" name="folio" style="width:120px;" readonly="true"></td>
+															<td width="40"></td>
+															<td width="65">Estatus</td>
+															<td width="90">
+																<select name="select_estatus" style="width:90px;"></select>
+															</td>
+															<td width="40"></td>
+															<td width="65">Programaci&oacute;n</td>
+															<td width="80"><input type="text" name="fecha" style="width:80px;" readonly="true"></td>
 															<td width="5"></td>
 														</tr>
-														
+														<tr><td colspan="9" height="8"></td></tr>
 														<tr>
-															<td width="5"></td>
-															<td width="90">													
-																<input type="hidden" name="producto_id">
-																<input type="text" name="codigo" style="width:90px; border:1px solid #000;">
-															</td>
-															<td width="10"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_codigo"></div></td>
-															<td width="60">&nbsp;<a href="agregar_producto" id="agregar_producto">(Agregar)</a></td>
-															<td width="240"><input type="text" name="descripcion" style="width:240px;"></td>
-															<td width="10">&nbsp;</td>
-															<td width="60">&nbsp;<a href="buscar_producto" id="buscar_producto">(Buscar)</a></td>
-															<td width="80">
-																<input type="text" name="unidad" style="width:80px;" readOnly="true">
-															</td>
-															<td width="10">&nbsp;</td>
-															<td width="120">
-																<select name="select_presentacion" style="width:120px;">
-																	<option value="0" selected="yes">[--Presentaci&oacute;n--]</option>
+															<td width="70">Empleado</td>
+															<td width="315" colspan="4">
+																<select name="select_empleado" style="width:315px;">
+																	<option value="0" selected="yes">[-- Seleccionar Empleado --]</option>
 																</select>
 															</td>
-															<td width="10"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
+															<td width="40"></td>
+															<td width="65"></td>
+															<td width="80"></td>
+															<td width="5"></td>
+														</tr>
+														<tr><td colspan="9" height="8"></td></tr>
+														<tr>
+															<td width="70">Almacen</td>
+															<td width="315" colspan="4">
+																<select name="select_almacen_orig" style="width:315px;">
+																	<option value="0" selected="yes">[-- Seleccionar Almacen --]</option>
+																</select>
+															</td>
+															<td width="40"></td>
+															<td width="65"></td>
+															<td width="80"></td>
+															<td width="5"></td>
+														</tr>
+														<tr><td colspan="9" height="8"></td></tr>
+														<tr>
+															<td width="70">C&oacute;digo</td>
+															<td width="120">
+																<input type="hidden" name="producto_id">
+																<input type="text" name="codigo" style="width:120px; border:1px solid #000;">
+															</td>
+															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
+															<td width="65">Descripci&oacute;n</td>
+															<td width="190" colspan="3"><input type="text" name="descripcion" style="width:190px;"></td>
+															<td width="80">&nbsp;<a href="buscar_producto" id="buscar_producto">(Buscar)</a></td>
+															<td width="5"></td>
+														</tr>
+														<tr><td colspan="9" height="8"></td></tr>
+														<tr>
+															<td width="70">Presentaci&oacute;n</td>
+															<td width="120">
+																<select name="select_presentacion_orig" style="width:120px;">
+																	<option value="0" selected="yes">[--Presentaci&oacute;n--]</option>
+																</select>
+																<select name="select_envases" style="width:120px; display:none;"></select>
+															</td>
+															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
+															<td width="65">Existencia</td>
+															<td width="90"><input type="text" name="exis_pres" style="width:80px; border:1px solid #000;" readonly="true"></td>
+															<td width="40"></td>
+															<td width="65">Disponible</td>
+															<td width="80"><input type="text" name="disp_pres" style="width:80px; border:1px solid #000;" readonly="true"></td>
+															<td width="5"></td>
+														</tr>
+														<tr><td colspan="9" height="8"></td></tr>
+														<tr>
+															<td width="70">Unidad</td>
+															<td width="120"><input type="text" name="unidad" style="width:120px; border:1px solid #000;" readonly="true"></td>
+															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
+															<td width="65">Existencia</td>
+															<td width="90"><input type="text" name="exis_uni" style="width:80px; border:1px solid #000;" readonly="true"></td>
+															<td width="40"></td>
+															<td width="65">Disponible</td>
+															<td width="80"><input type="text" name="disp_uni" style="width:80px; border:1px solid #000;" readonly="true"></td>
 															<td width="5"></td>
 														</tr>
 													</table>
 												</td>
 											</tr>
-											<tr>
-												<td height="8"></td>
-											</tr>
-											<tr>
-												<!--<td style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF; background-color: rgb(180, 180, 180);">Agregar productos para el Evase</td>-->
-												<td style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">Agregar productos para el Evase</td>
-											</tr>
-											<tr>
-												<td height="10" style="background-color:#e7e8ea;"></td>
-											</tr>
-											<tr>
-												<td style="background-color:#e7e8ea;">
-													<table border="0" class="gral">
-														<tr><td colspan="11" height="2"></td></tr>
-														<tr>
-															<td width="10"></td>
-															<td width="70">C&oacute;digo&nbsp;producto</td>
-															<td width="125"><input type="text" name="codigo_componente" style="width:120px; border:1px solid #000;"></td>
-															<td width="70"><a href="agregar_producto_componente">&nbsp;(Agregar)</a></td>
-															<td width="45">Nombre</td>
-															<td width="240"><input type="text" name="nombre_componente" style="width:280px;"></td>
-															<td width="55"><a href="buscar_producto_componente">&nbsp;(Buscar)</a></td>
-															<td width="15"></td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-											
 											
 											<tr>
-												<td style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
+												<td height="10" style="background-color:#e7e8ea; border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">Listado de Presentaciones para el Envasado</td>
+											</tr>
+											
+											<tr>
+												<td style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">
 													<table >
 														<thead>
 															<tr>
-																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="60"><div class="delete">&nbsp;#</div></td>
-																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="130">&nbsp;C&oacute;digo</td>
-																<td class="grid" style="background-color: rgb(180, 180, 180);"  width="290">&nbsp;Descripci&oacute;n</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="68">#</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="180">&nbsp;Almacen Destino</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="130">&nbsp;Presentaci&oacute;n</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="85">&nbsp;Cantidad</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="90">&nbsp;Unidad</td>
-																<td class="grid" style="background-color: rgb(180, 180, 180);" width="105">&nbsp;Cantidad</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="115">&nbsp;Cantidad</td>
 															</tr>
 														</thead>
 													</table>
 													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:700; height: 110px; border:1px solid #C1DAD7 !important;">	
 														<table>
 															<tbody id="grid_productos" style="background-color: #FFFFFF;" valign="top">
+																<!--
+																<tr>
+																	<td class="grid" style="font-size:14px; font-weight:bold; border:1px solid #C1DAD7;" width="30">
+																		<a href="#" class="add">&nbsp;&nbsp;+&nbsp;&nbsp;</a>
+																	</td>
+																	<td class="grid" style="font-size:15px; font-weight:bold; border:1px solid #C1DAD7;" width="30">
+																		<a href="#" class="delete">&nbsp;&nbsp;-&nbsp;&nbsp;</a>
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="180">
+																		<input type="hidden" 	name="idprod" id="idprod" value="">
+																		<select name="select_aml_dest" style="width:176px;">
+																			<option value="0" selected="yes">[--Seleccionar Almacen--]</option>
+																		</select>
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="130">
+																		<select name="select_pres_dest" style="width:126px;">
+																			<option value="0" selected="yes">[--Presentacion--]</option>
+																		</select>
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="85">
+																		<input type="text" 	name="cantpres" id="cantpres" value="" style="width:80px;" maxlength="10">
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="90">
+																		<input type="text" 	name="uni" value="" id="uni" class="borde_oculto" readOnly="true" style="width:86px;">
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="95">
+																		<input type="text" 	name="cantpres" id="cantuni" value="" class="borde_oculto" readOnly="true" style="width:90px; text-align:right;">
+																	</td>																	
+																</tr>
+																-->
 																
 															</tbody>
 														</table>
