--- a/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
@@ -197,6 +197,7 @@
 																	<option value="0" selected="yes">[--Presentaci&oacute;n--]</option>
 																</select>
 																<select name="select_envases" style="width:120px; display:none;"></select>
+																<input type="hidden" name="valor_ant_pres" value="0">
 															</td>
 															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
 															<td width="65">Existencia</td>
@@ -209,7 +210,10 @@
 														<tr><td colspan="9" height="8"></td></tr>
 														<tr>
 															<td width="70">Unidad</td>
-															<td width="120"><input type="text" name="unidad" style="width:120px; " readonly="true"></td>
+															<td width="120">
+																<input type="text" name="unidad" style="width:120px; " readonly="true">
+																<input type="hidden" name="no_dec" value="0">
+															</td>
 															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
 															<td width="65">Existencia</td>
 															<td width="90"><input type="text" name="exis_uni" style="width:80px; text-align:right;" readonly="true"></td>
@@ -243,6 +247,7 @@
 													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:700; height: 110px; border:1px solid #C1DAD7 !important;">	
 														<table>
 															<tbody id="grid_productos" style="background-color: #FFFFFF;" valign="top">
+																
 																<!--
 																<tr>
 																	<td class="grid" style="font-size:14px; font-weight:bold; border:1px solid #C1DAD7;" width="30">
@@ -269,7 +274,7 @@
 																		<input type="text" 	name="uni" value="" id="uni" class="borde_oculto" readOnly="true" style="width:86px;">
 																	</td>
 																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="95">
-																		<input type="text" 	name="cantpres" id="cantuni" value="" class="borde_oculto" readOnly="true" style="width:90px; text-align:right;">
+																		<input type="text" 	name="cantuni" id="cantuni" value="" class="borde_oculto" readOnly="true" style="width:90px; text-align:right;">
 																	</td>																	
 																</tr>
 																-->
