--- a/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
@@ -148,7 +148,7 @@
 															<td width="40"></td>
 															<td width="75">Programaci&oacute;n</td>
 															<td width="80"><input type="text" name="fecha" style="width:80px;" maxlength="10"></td>
-															<td width="10"></td>
+															<td width="10"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha"></div></td>
 															<td width="80"></td>
 														</tr>
 														<tr><td colspan="10" height="8"></td></tr>
@@ -159,10 +159,10 @@
 																	<option value="0" selected="yes">[-- Seleccionar Empleado --]</option>
 																</select>
 															</td>
-															<td width="40"></td>
+															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_empleado"></div></td>
 															<td width="75">Hora&nbsp;de&nbsp;Inicio</td>
 															<td width="80"><input type="text" name="hora" style="width:80px;" maxlength="8"></td>
-															<td width="10"></td>
+															<td width="10"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_hora"></div></td>
 															<td width="80"></td>
 														</tr>
 														<tr><td colspan="10" height="8"></td></tr>
@@ -186,7 +186,7 @@
 																<input type="hidden" name="producto_id">
 																<input type="text" name="codigo" style="width:120px; border:1px solid #000;">
 															</td>
-															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_presentacion"></div></td>
+															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_codigo"></div></td>
 															<td width="65">Descripci&oacute;n</td>
 															<td width="200" colspan="3"><input type="text" name="descripcion" style="width:200px;"></td>
 															<td width="80">&nbsp;<a href="buscar_producto" id="buscar_producto">(Buscar)</a></td>
